crates/toml_edit/tests/fixtures/invalid/string-bad-escape.stderr
TOML parse error at line 1, column 42
  |
1 | invalid-escape = "This string has a bad \a escape character."
  |                                          ^
Unexpected `a`
While parsing escape sequence
While parsing a Basic String
